cv-front | CollaPage desktop and mobile paddings fixed.
Now figures don't get clipped before the end and info is shown adjusted to the left on small screens.

--- a/cv-front/src/app/sections/colles/colla/CollaPage.module.scss
+++ b/cv-front/src/app/sections/colles/colla/CollaPage.module.scss
@@ -57,8 +57,6 @@
   }
 
 
-  padding: 1rem;
-  padding-left: 5rem;
   overflow: hidden;
   background: transparent;
   color: #000000;
@@ -212,11 +210,17 @@
 
   .leftContent, .rightContent {
     width: 100%; /* Initially, each content section occupies full width */
-    padding: 10px; /* Adjust padding as needed */
+  }
+
+  .leftContent {
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 
   @media (min-width: 768px) {
     .leftContent {
+      padding-left: 5rem;
+      padding-right: 2rem;
       width: 50%; /* Left content takes 50% width on wider screens */
       order: 1; /* Display left content first in the flex order */
     }
